--- a/app/templates/company_base.html
+++ b/app/templates/company_base.html
@@ -91,6 +91,7 @@
     {{ moment.include_moment() }}
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.quicksearch/2.4.0/jquery.quicksearch.min.js" integrity="sha256-hD1kpQcVntR40eMx9uED+E4HAjD2OJkLIFcP6ukVd+g=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.0/JsBarcode.all.min.js"></script>
 	<script src="{{url_for('static', filename='js/calculator.js')}}"></script>
 	<script src="{{url_for('static', filename='js/biochem.js')}}"></script>
 	<script src="{{url_for('static', filename='js/inventory.js')}}"></script>
