--- a/app/templates/inventory_management/inventory.html
+++ b/app/templates/inventory_management/inventory.html
@@ -72,10 +72,11 @@
 					<br>
 					{% for i in my_p.item_query %}
 					<div class="bcodes bcodes_{{ my_p.ref_number }} text-center" id="bc_container_{{ i.lot_num }}{{ i.id }}" style="text-align:center;margin:0 auto;">
-						<img  id="bc_{{ i.lot_num }}{{ i.id }}" style="margin: 0;">
-						<p>{{ i.lot_num }}-{{ i.id }}</p>
-						<p>{{ my_p.name }}</p>
-						<p>Lot: {{ i.lot_num }} &nbsp&nbsp&nbsp Expiry: {{ i.expiry.strftime('%d-%m-%Y') }}</p>
+						<svg  id="bc_{{ i.lot_num }}{{ i.id }}" style="margin: 0;">
+						<p style="margin: 0;font-size:10px;">{{ i.lot_num }}-{{ i.id }} &nbsp&nbsp&nbsp Date received: {{ i.received_date.strftime('%d-%m-%Y') }}</p>
+						<p style="margin: 0;font-size:10px;">{{ my_p.name }}</p>
+						<!--p style="margin: 0;">Lot: {{ i.lot_num }} &nbsp&nbsp&nbsp Expiry: {{ i.expiry.strftime('%d-%m-%Y') }}</p-->
+						<br>
 						<p><input type="button" class="btn btn-default" id="print_{{ i.lot_num }}{{ i.id }}" value="Print"></p>
 					</div>
 					{% endfor %}
@@ -108,9 +109,9 @@
 			{% for my_p in my_products %}
 			{% for i in my_p.item_query %}
 			$("#bc_{{ i.lot_num }}{{ i.id }}").JsBarcode("{{ i.lot_num }}-{{ i.id }}", {
-				width: 5,
-				height: 100,
-				fontSize: 20,
+				width: 2,
+				height: 40,
+				fontSize: 12,
 				margin: 5,
 				displayValue: false,
 			});
@@ -127,6 +128,15 @@
 						"margin: 0;" +
 						"padding: 0;" +
 					"}" +*/
+					".page {" +
+						"width: 3in;" +
+						"height: 2in;" +
+						"margin: 0;" +
+					"}" +
+					 ".bcodes_{{ my_p.ref_number }} {" +
+						"width: 100%;" +
+						"height: 100%;" +
+						 "}" +
 					"@media print {" + 
 						"html, body {" + 
 							"visibility: hidden;" +
@@ -137,7 +147,7 @@
 							"}" + 
 						"#bc_container_{{ i.lot_num }}{{ i.id }} {" +
 							"visibility: visible;" +
-							//"margin-top: 0;" +
+							"margin-top: 0;" +
 							"margin-bottom: 5px;" +
 							"width: 100%;" +
 							"height: 100%;" +
