--- a/app/templates/inventory_management/departments.html
+++ b/app/templates/inventory_management/departments.html
@@ -6,7 +6,7 @@
     <h3 class="inventory_headers">Manage Departments/ Item Types</h3>
 	<hr class="inventory_hr">
     <div class="row">
-		{% if is_inv_access %}
+		{% if is_inv_supervisor %}
 		<div class="col-md-4 registerContainer">
 			<div class="col-md-12">
 				{% if form1 %}
