--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -11,17 +11,19 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h4>Manage Affiliates</h4>
-			<table class="table table-striped table-hover">
+			<table class="table table-striped table-hover sort_table">
 			{% if affiliates %}
-				<tr class="text-center">
-					<th>Full name (username)</th>
-					<th>Title</th>
-					<th>Action</th>
-					<th></th>
-				</tr>
+				<thead>
+					<tr class="text-center">
+						<th>Full name (username)</th>
+						<th>Title</th>
+						<th>Action</th>
+						<th></th>
+					</tr>
+				</thead>
 					{% for affiliate in affiliates %}
 				<tr>
-					<td class="col-md-3 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.firstname}} {{ affiliate.users.lastname}} ({{ affiliate.users.username}})</a></td>
+					<td class="col-md-3 admin-table"><a href="{{ url_for('user', username=affiliate.users.username) }}">{{ affiliate.users.firstname }} {{ affiliate.users.lastname}} ({{ affiliate.users.username}})</a></td>
 					<td class="col-md-3 admin-table">{{ affiliate.title}}</a></td>
 					<td class="admin-table"><a href="{{ url_for('manage_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}" >Edit Role</a></td>
 					<td class="admin-table"><a href="{{ url_for('retire_affiliate', user_id=affiliate.user_id, comp_id=affiliate.company_id) }}">Retire</a></td>
@@ -45,6 +47,24 @@
 					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=pending_affiliate.users.username) }}">{{ pending_affiliate.users.firstname}} {{ pending_affiliate.users.lastname}} ({{ pending_affiliate.users.username}})</a></td>
 					<td class="col-md-1 admin-table"><a href="{{ url_for('accept_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Accept</a></td>
 					<td class="col-md-1 admin-table"><a href="{{ url_for('delete_affiliate', user_id=pending_affiliate.user_id, comp_id=pending_affiliate.company_id) }}">Reject</a></td>
+				</tr>
+				{% endfor %}
+			</table>
+		{% endif %}
+		</div>
+		<div class="col-md-12">
+			{% if past_affiliates %}
+			<h4>Past affiliates</h4>
+			<table class="table table-striped table-hover">
+				<tr class="text-center">
+					<th>Full name (username)</th>
+					
+					
+				</tr>
+				{% for past_affiliate in past_affiliates %}
+				<tr>
+					<td class="col-md-4 admin-table"><a href="{{ url_for('user', username=past_affiliate.users.username) }}">{{ past_affiliate.users.firstname}} {{ past_affiliate.users.lastname}} ({{ past_affiliate.users.username}})</a></td>
+					
 				</tr>
 				{% endfor %}
 			</table>
